Comienza desarrollo de 1.9

--- a/dba/liquibase/main.yml
+++ b/dba/liquibase/main.yml
@@ -72,3 +72,7 @@ databaseChangeLog:
 - include:
     file: incrementales-v1_8.yml
     relativeToChangelogFile: true
+
+- include:
+    file: incrementales-v1_9.yml
+    relativeToChangelogFile: true
