tg-2987 [DB] Agregar columna doctors_office_id a tabla Triage

--- a/dba/liquibase/incrementales-v1_9.yml
+++ b/dba/liquibase/incrementales-v1_9.yml
@@ -8,3 +8,31 @@ databaseChangeLog:
             dropColumn:
                 tableName: triage
                 columnName: healthcare_professional_id
+
+    - changeSet:
+        id: triage-addColumn-doctors_office_id
+        author: tmedina
+        changes:
+            - addColumn:
+                tableName: triage
+                columns:
+                - column:
+                    name: doctors_office_id
+                    type: int
+                    constraints: 
+                        nullable: true
+
+    - changeSet:
+        id: triage-addForeignKeyConstraint-doctors_office_id
+        author: tmedina
+        changes:
+            - addForeignKeyConstraint:
+                baseColumnNames: doctors_office_id
+                baseTableName: triage
+                constraintName: FK_triage_doctors_office_id
+                onDelete: NO ACTION
+                onUpdate: NO ACTION
+                referencedColumnNames: id
+                referencedTableName: doctors_office
+                validate: true
+
