--- a/sgh-ansible/hosts-template-ha.yml
+++ b/sgh-ansible/hosts-template-ha.yml
@@ -32,4 +32,13 @@ all:
         sgh_database_user_name: sgh_test
         sgh_database_user_password: sgh_test
         sgh_database_name: sgh_test
-	token_secret: toBeChanged
+        app_flavor:
+        recaptcha_secret_key:
+        recaptcha_site_key:
+	    token_secret:
+        renaper_usuario:
+        renaper_clave:
+        federar_issuer:
+        federar_subject:
+        federar_audience:
+        federar_sign_key:
