--- a/sgh-ansible/roles/sgh-back/defaults/main.yml
+++ b/sgh-ansible/roles/sgh-back/defaults/main.yml
@@ -3,3 +3,4 @@ SGH_HOME: /sgh/
 BACK_END_WAR: ../../dist/api.war
 CATALINA_HOME: /usr/share/tomcat/
 document_root_directory: "{{ SGH_HOME }}documents/"
+admin_password: admin123
