--- a/sgh-ansible/hosts-template-single-node.yml
+++ b/sgh-ansible/hosts-template-single-node.yml
@@ -33,4 +33,13 @@ all:
         sgh_database_user_name: sgh_test
         sgh_database_user_password: sgh_test
         sgh_database_name: sgh_test
-        token_secret: toBeChanged
+        token_secret:
+        app_flavor:
+        recaptcha_secret_key:
+        recaptcha_site_key:
+        renaper_usuario:
+        renaper_clave:
+        federar_issuer:
+        federar_subject:
+        federar_audience:
+        federar_sign_key:
