tg-2999 eliminar columna healthcare_professional_id de la tabla triage

--- a/dba/liquibase/incrementales-v1_9.yml
+++ b/dba/liquibase/incrementales-v1_9.yml
@@ -1,3 +1,10 @@
 databaseChangeLog: 
     - logicalFilePath: incrementales-v1_9 
 
+    - changeSet:
+        id: drop-column-healthcare_professional_id-triage
+        author: nayerdi
+        changes:
+            dropColumn:
+                tableName: triage
+                columnName: healthcare_professional_id
