tg-2918 [BUS] Acomoda atributo fullUrl segun lo requerido para cada tipo de recurso

--- a/back-end/hospital-api/src/test/resources/swagger-test.properties
+++ b/back-end/hospital-api/src/test/resources/swagger-test.properties
@@ -70,6 +70,7 @@ actuator.configuration.authenticated=${ACTUATOR_REQUIRED_AUTHENTICATION:false}
 #========= RENAPER ==========#
 ws.renaper.tokenExpiration=15
 ws.renaper.dominio
+ws.federar.claims.iss=http://www.msal.gov.ar
 
 # ===============================
 # reCaptcha Google
