tg-3049 Renombro PWA como "Historia de salud integrada"

--- a/front-end/backoffice/public/manifest.json
+++ b/front-end/backoffice/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "sgh",
-  "name": "sgh",
+  "short_name": "HSI",
+  "name": "Historia de salud integrada",
   "icons": [
     {
       "src": "favicon.ico",
