--- a/front-end/webapp/package.json
+++ b/front-end/webapp/package.json
@@ -7,7 +7,8 @@
 		"build": "ng build",
 		"build:prod": "ng build --prod --base-href /",
 		"test": "ng test",
-		"lint": "ng lint",
+		"lint": "ng lint --tslint-config=tslint-ci.json",
+		"lint:fix": "ng lint --fix --tslint-config=tslint-ci.json",
 		"e2e": "ng e2e"
 	},
 	"private": true,
