Comienza desarrollo de 1.10

--- a/dba/liquibase/main.yml
+++ b/dba/liquibase/main.yml
@@ -76,3 +76,7 @@ databaseChangeLog:
 - include:
     file: incrementales-v1_9.yml
     relativeToChangelogFile: true
+
+- include:
+    file: incrementales-v1_10.yml
+    relativeToChangelogFile: true
