--- a/back-end/hospital-api/src/main/resources/application.properties
+++ b/back-end/hospital-api/src/main/resources/application.properties
@@ -63,7 +63,7 @@ spring.datasource.hikari.maximumPoolSize=${HICKARI_MAXIMUM_POOL_SIZE:3}
 spring.datasource.url=jdbc:postgresql://${DATABASE_IP_PORT:localhost:5432}/${DATABASE_SCHEMA:hospitalDB}
 spring.datasource.username=${DATABASE_USER:postgres}
 spring.datasource.password=${DATABASE_PASS:Local123}
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.database-platform=net.pladema.sgx.repository.dialect.CustomPostgreSQLDialect
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.validationQuery = SELECT 1
 
