--- a/dba/liquibase/incrementales-v1_10.yml
+++ b/dba/liquibase/incrementales-v1_10.yml
@@ -1,3 +1,75 @@
 databaseChangeLog: 
     - logicalFilePath: incrementales-v1_10 
 
+    - changeSet:
+        id: dropFK-emergency_care_episode-police_intervention
+        author: saguero
+        changes:
+        -  dropForeignKeyConstraint:
+            baseTableName: emergency_care_episode
+            constraintName: FK_emergency_care_episode_police_intervention_id
+
+    - changeSet:
+        id: modifyPrimaryKey-police_intervention
+        author: saguero
+        changes:
+        - addColumn:
+            tableName: police_intervention
+            columns:
+                name: emergency_care_episode_id
+                type: int
+                constraints:
+                    nullable: false
+                defaultValue: -1
+        - sql:
+            sql: |-
+                update police_intervention
+                set emergency_care_episode_id = emergency_care_episode.id
+                from emergency_care_episode
+                where police_intervention.id = emergency_care_episode.police_intervention_id
+                ;
+                delete from police_intervention where emergency_care_episode_id = -1
+        - dropPrimaryKey:
+            constraintName: PK_police_intervention
+            dropIndex: true
+            tableName: police_intervention
+        - dropColumn:
+            columnName: id
+            tableName: police_intervention
+        - addPrimaryKey:
+            clustered: true
+            columnNames: emergency_care_episode_id
+            constraintName: PK_police_intervention
+            tableName: police_intervention
+            validate: true
+        - addForeignKeyConstraint:
+            baseColumnNames: emergency_care_episode_id
+            baseTableName: police_intervention
+            constraintName: FK_police_intervention_emergency_care_episode
+            referencedColumnNames: id
+            referencedTableName: emergency_care_episode
+            validate: true
+
+    - changeSet:
+        id: modifyData-emergency_care_episode-police_intervention
+        author: saguero
+        changes:
+        - addColumn:
+            tableName: emergency_care_episode
+            columns:
+                name: has_police_intervention
+                type: boolean
+        - sql:
+            sql: |-
+                UPDATE emergency_care_episode SET has_police_intervention = ${boolean.true} WHERE police_intervention_id IS NOT NULL;
+        - dropColumn:
+            columnName: police_intervention_id
+            tableName: emergency_care_episode
+
+    - changeSet:
+        id: renameTable-police_intervention
+        author: saguero
+        changes:
+        - renameTable:
+            newTableName: police_intervention_details
+            oldTableName: police_intervention
