--- a/dba/liquibase/incrementales-v1_11.yml
+++ b/dba/liquibase/incrementales-v1_11.yml
@@ -161,4 +161,15 @@ databaseChangeLog:
                     INSERT INTO emergency_care_discharge (emergency_care_episode_id , discharge_type_id, administrative_discharge_on, administrative_discharge_by_user) 
                         (SELECT hee.emergency_care_episode_id , 4, hee.change_state_date , hee.created_by
                         FROM historic_emergency_episode hee
-                        WHERE hee.emergency_care_state_id = 3);   
+                        WHERE hee.emergency_care_state_id = 3);
+
+    - changeSet:
+        id: emergency_care_state-modifyData
+        comment: Modify master data descriptions in emergency_care_state
+        author: tmedina
+        context: "!schema-only"
+        changes:
+            - sql:
+                sql: |-
+                    UPDATE emergency_care_state SET description='Con alta administrativa' WHERE id=3;
+                    UPDATE emergency_care_state SET description='Con alta médica' WHERE id=4;
