--- a/dba/liquibase/main.yml
+++ b/dba/liquibase/main.yml
@@ -80,3 +80,7 @@ databaseChangeLog:
 - include:
     file: incrementales-v1_10.yml
     relativeToChangelogFile: true
+
+- include:
+    file: incrementales-v1_11.yml
+    relativeToChangelogFile: true
